bugfix/WY-408 fix image grid on small mobile viewports

--- a/src/logogallery-container/style.scss
+++ b/src/logogallery-container/style.scss
@@ -59,12 +59,24 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				width: calc(50% - 16px * (2 - 1)/ 2);
+				width: 100%;
 			}
 		}
 	}
 
 	@media only screen and (min-width: 576px) {
+
+		.grid {
+
+			&.sponsors-wrapper {
+
+				.grid__column {
+					width: calc(50% - 16px * (2 - 1)/ 2);
+				}
+
+			}
+
+		}
 
 		.hds-container {
 
